--- a/exercises/lab2/03_exercise_01.ipynb
+++ b/exercises/lab2/03_exercise_01.ipynb
@@ -43,17 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "66e97cd7-47a3-4011-8912-27ef003c4479",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moi ban nhap vao gia tri cua bien so x:  2.3\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -69,8 +62,8 @@
     "# Nhập dữ liệu\n",
     "x   = float(input('Moi ban nhap vao gia tri cua bien so x: '))\n",
     "# Xử lý\n",
-    "\"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "# ...\n",
+    "\n",
+    "f_x = x + x**5 / math.factorial(5) + math.sqrt(abs(x)) / x ** (3/2)\n",
     "\n",
     "# Xuất dữ liệu\n",
     "print(f'Gia tri cua ham so f({x}) = {f_x: .2f}.')"
@@ -91,17 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "ad9c7cc5-a62b-42aa-b19b-4383dc118098",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nhap vao tong so giay:  4810\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -115,8 +101,9 @@
     "t  = int(input('Nhap vao tong so giay: '))\n",
     "\n",
     "# Xử lý\n",
-    "\"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "# ...\n",
+    "hh = t//3600\n",
+    "mm = (t%3600) // 60\n",
+    "ss = (t%3600) % 60\n",
     "\n",
     "# Xuất dữ liệu\n",
     "print(f'{t} giay co dang {hh}:{mm}:{ss}')"
@@ -144,18 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "073e5194-32f7-4e30-af77-f8173f70da26",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moi ban nhap he so a:  1\n",
-      "Moi ban nhap he so b:  5\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -170,8 +149,15 @@
     "b  = int(input('Moi ban nhap he so b: '))\n",
     "\n",
     "# Xử lý\n",
-    "\"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "# ...\n",
+    "flag = 1\n",
+    "if a == 0:\n",
+    "    if b == 0:\n",
+    "        flag = -1\n",
+    "    else: \n",
+    "        flag = 0\n",
+    "else:\n",
+    "    x = -b/a\n",
+    "\n",
     "    \n",
     "# Xuất dữ liệu\n",
     "s = f'Phuong trinh {a}x + {b} = 0'\n",
@@ -201,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "05d9f65b-4e99-4b6f-aba8-c285290b2c5e",
    "metadata": {},
    "outputs": [
@@ -252,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "845506c4-f77f-4c2c-91b4-b34b33d6b2db",
    "metadata": {},
    "outputs": [
@@ -302,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c8ef7876-623d-4d8b-95be-87e26917b8d8",
    "metadata": {},
    "outputs": [
@@ -361,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2a05bbed-f93b-4aec-bb26-f784f78421e4",
    "metadata": {},
    "outputs": [],
@@ -382,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "142a6409-22ab-48fe-bded-904f389d9bd7",
    "metadata": {},
    "outputs": [
@@ -403,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "604c3a62-ccf1-446b-8455-b24f37d2008d",
    "metadata": {},
    "outputs": [],
@@ -430,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "026317a6-6f3a-4d67-a53c-9e8623aa7718",
    "metadata": {},
    "outputs": [
@@ -469,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2977bb76-9c3e-4395-acd9-9b53183e3a9c",
    "metadata": {},
    "outputs": [
@@ -537,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0198d726-ca73-4d42-ab0c-337a50228bb6",
    "metadata": {},
    "outputs": [],
@@ -558,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c3b4c530-34f8-445b-bf69-5864e08bdb97",
    "metadata": {},
    "outputs": [
@@ -584,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "424c3606-f2b4-4000-b5b9-7237f96f4a34",
    "metadata": {},
    "outputs": [],
@@ -605,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a1cdc488-a080-47cb-bd06-42b12b47f84e",
    "metadata": {},
    "outputs": [
@@ -624,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "c3b401bb-877e-4a2e-8940-81e79411c826",
    "metadata": {},
    "outputs": [],
@@ -647,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d1b76bc2-f9ae-4a7a-9dcb-36e80e96ebd5",
    "metadata": {},
    "outputs": [
@@ -672,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e710b533-d63d-4a08-a70f-e593f5ff3612",
    "metadata": {},
    "outputs": [],
@@ -695,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "44c8959b-84fa-4174-83b3-18fc02152a04",
    "metadata": {},
    "outputs": [
@@ -717,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "2627b2c2-ab2c-4774-8932-5db03e813a20",
    "metadata": {},
    "outputs": [],
@@ -742,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a9d76464-34d9-4b35-9250-8f9ab9b06a88",
    "metadata": {},
    "outputs": [
@@ -777,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "fe04c02c-1165-4cb1-a6f5-0c12ad9d1060",
    "metadata": {},
    "outputs": [],
@@ -799,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "441638fc-6c33-4bf7-82a5-7e6dcfb400e2",
    "metadata": {},
    "outputs": [
@@ -819,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ed5c380a-09fa-4da3-afb9-fcd863fe3ecb",
    "metadata": {},
    "outputs": [],
@@ -841,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "235695e6-a3de-4bfb-a432-6ab086836877",
    "metadata": {},
    "outputs": [
@@ -884,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
