update new file

--- a/exercises/lab2/pythonProgramming.ipynb
+++ b/exercises/lab2/pythonProgramming.ipynb
@@ -581,19 +581,18 @@
    "id": "3c451fac",
    "metadata": {},
    "source": [
-    "• Method Description\n",
-    "• append() Adds an element at the end of the list\n",
-    "• clear() Removes all the elements from the list\n",
-    "• copy() Returns a copy of the list\n",
-    "• count() Returns the number of elements with the specified value\n",
-    "• extend() Add the elements of a list (or any iterable), to the end of the\n",
-    "current list\n",
-    "• index() Returns the index of the first element with the specified value\n",
-    "• insert() Adds an element at the specified position\n",
-    "• pop() Removes the element at the specified position\n",
-    "• remove()Removes the item with the specified value\n",
-    "• reverse() Reverses the order of the list\n",
-    "• sort() Sorts the list"
+    "• Method Description<br>\n",
+    "• append() Adds an element at the end of the list<br>\n",
+    "• clear() Removes all the elements from the list<br>\n",
+    "• copy() Returns a copy of the list<br>\n",
+    "• count() Returns the number of elements with the specified value<br>\n",
+    "• extend() Add the elements of a list (or any iterable), to the end of the current list<br>\n",
+    "• index() Returns the index of the first element with the specified value<br>\n",
+    "• insert() Adds an element at the specified position<br>\n",
+    "• pop() Removes the element at the specified position<br>\n",
+    "• remove()Removes the item with the specified value<br>\n",
+    "• reverse() Reverses the order of the list<br>\n",
+    "• sort() Sorts the list<br>"
    ]
   },
   {
@@ -851,19 +850,19 @@
    "metadata": {},
    "source": [
     "### Python if...else\n",
-    "Python if...else\n",
-    "• if elif else\n",
-    "• Booleans: True, False\n",
-    "• Operators: ==, !=, >, <, >=, <=, and, or, not\n",
+    "Python if...else<br>\n",
+    "• if elif else<br>\n",
+    "• Booleans: True, False<br>\n",
+    "• Operators: ==, !=, >, <, >=, <=, and, or, not<br><br>\n",
     "\n",
     "\n",
-    "Python supports the usual logical conditions from mathematics:\n",
-    "• Equals: a == b\n",
-    "• Not Equals: a != b\n",
-    "• Less than: a < b\n",
-    "• Less than or equal to: a <= b\n",
-    "• Greater than: a > b\n",
-    "• Greater than or equal to: a >= b"
+    "Python supports the usual logical conditions from mathematics:<br>\n",
+    "• Equals: a == b<br>\n",
+    "• Not Equals: a != b<br>\n",
+    "• Less than: a < b<br>\n",
+    "• Less than or equal to: a <= b<br>\n",
+    "• Greater than: a > b<br>\n",
+    "• Greater than or equal to: a >= b<br>"
    ]
   },
   {
@@ -1149,10 +1148,10 @@
    "source": [
     "## Python Functions\n",
     "\n",
-    "• A function is a block of code which only runs when it is called.\n",
-    "• You can pass data, known as parameters, into a function.\n",
-    "• A function can return data as a result.\n",
-    "• Creating a Function\n",
+    "• A function is a block of code which only runs when it is called.<br>\n",
+    "• You can pass data, known as parameters, into a function.<br>\n",
+    "• A function can return data as a result.<br>\n",
+    "• Creating a Function<br>\n",
     "• In Python a function is defined using the def keyword:"
    ]
   },
@@ -1197,11 +1196,11 @@
    "source": [
     "## Python Classes/Objects\n",
     "\n",
-    "• Python is an object oriented programming language.\n",
-    "• Almost everything in Python is an object, with its properties and methods.\n",
-    "• A Class is like an object constructor, or a \"blueprint\" for creating objects.\n",
-    "• Create a Class:\n",
-    "• To create a class, use the keyword class:"
+    "• Python is an object oriented programming language.<br>\n",
+    "• Almost everything in Python is an object, with its properties and methods.<br>\n",
+    "• A Class is like an object constructor, or a \"blueprint\" for creating objects.<br>\n",
+    "• Create a Class:<br>\n",
+    ">    • To create a class, use the keyword class:"
    ]
   },
   {
