Complete ex1 and ex2

--- a/exercises/lab2/03_exercise_01.ipynb
+++ b/exercises/lab2/03_exercise_01.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "05d9f65b-4e99-4b6f-aba8-c285290b2c5e",
    "metadata": {},
    "outputs": [
@@ -195,15 +195,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moi ban nhap chuoi ky so s:  oNe\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Chuoi vua nhap hop le!\n",
-      "\"oNe\" bieu dien cho \"1\" va ung voi tieng Viet \"mot\"\n"
+      "\"oNe\" bieu dien so cho \"1\" va ung voi tieng Viet \"mot\".\n"
      ]
     }
    ],
@@ -213,8 +206,16 @@
     "en  = [\"zero\", \"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\"]\n",
     "vi  = [\"khong\", \"mot\", \"hai\", \"ba\", \"bon\", \"nam\", \"sau\", \"bay\", \"tam\", \"chin\"]\n",
     "num = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-    "\"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "# ..."
+    "\n",
+    "# Chuyển chuỗi nhập về dạng thường để so khớp (tránh phân biệt hoa/thường)\n",
+    "s_lower = s.strip().lower()\n",
+    "\n",
+    "if s_lower in en:\n",
+    "    idx = en.index(s_lower)\n",
+    "    print(\"Chuoi vua nhap hop le!\")\n",
+    "    print(f\"\\\"{s}\\\" bieu dien so cho \\\"{num[idx]}\\\" va ung voi tieng Viet \\\"{vi[idx]}\\\".\")\n",
+    "else:\n",
+    "    print(\"Chuoi vua nhap khong hop le!\")"
    ]
   },
   {
@@ -238,17 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "845506c4-f77f-4c2c-91b4-b34b33d6b2db",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moi ban nhap so nguyen n:  100\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -263,8 +257,9 @@
     "\n",
     "# Xuất dữ liệu\n",
     "s   = 0\n",
-    "\"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "# ...\n",
+    "for i in range(1, 101):\n",
+    "    if i % 2 == 0:\n",
+    "        s += i\n",
     "\n",
     "print(f'Tong cac so chan tu 1 den {n} la {s}.')"
    ]
@@ -288,17 +283,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c8ef7876-623d-4d8b-95be-87e26917b8d8",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moi ban nhap so nguyen n:  97\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -312,8 +300,15 @@
     "n   = int(input(\"Moi ban nhap so nguyen n: \"))\n",
     "\n",
     "# Xử lý \n",
-    "\"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "# ...\n",
+    "lant = True   # giả sử ban đầu là số nguyên tố\n",
+    "\n",
+    "if n < 2:\n",
+    "    lant = False\n",
+    "else:\n",
+    "    for i in range(2, int(n**0.5) + 1):\n",
+    "        if n % i == 0:\n",
+    "            lant = False\n",
+    "            break\n",
     "\n",
     "# Xuất dữ liệu\n",
     "if lant == True:\n",
@@ -347,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2a05bbed-f93b-4aec-bb26-f784f78421e4",
    "metadata": {},
    "outputs": [],
@@ -359,16 +354,20 @@
     "    Output:\n",
     "        (a, b, c) --> (1, 5, 6)\n",
     "    \"\"\"\n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"    \n",
-    "    # ...\n",
-    "\n",
-    "    return a, b, c\n",
+    "    \n",
+    "    while True:\n",
+    "        try:\n",
+    "            s = input(\"Moi ban nhap he so a, b, c: \")\n",
+    "            a, b, c = map(float, s.split())\n",
+    "            return a, b, c\n",
+    "        except:\n",
+    "            print(\"Ban nhap sai! Moi ban nhap lai!\")\n",
     "# NhapDuLieu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "142a6409-22ab-48fe-bded-904f389d9bd7",
    "metadata": {},
    "outputs": [
@@ -376,9 +375,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moi ban nhap he so a, b, c:  a b c\n",
-      "Moi ban nhap he so a, b, c:  1 a 3\n",
-      "Moi ban nhap he so a, b, c:  1 5 6\n"
+      "Ban nhap sai! Moi ban nhap lai!\n",
+      "Ban nhap sai! Moi ban nhap lai!\n"
      ]
     }
    ],
@@ -389,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "604c3a62-ccf1-446b-8455-b24f37d2008d",
    "metadata": {},
    "outputs": [],
@@ -399,24 +397,48 @@
     "    Input: a, b, c\n",
     "    Output: \n",
     "    + flag = -1 (VSN), 0 (VN), k (k nghiem)\n",
-    "    + () --> flag = -1, 0\n",
-    "    + (x) --> flag = 1\n",
-    "    + (x1, x2) --> flag = 2\n",
+    "    + ()           --> flag = -1, 0\n",
+    "    + (x,)         --> flag = 1\n",
+    "    + (x1, x2)     --> flag = 2\n",
     "    \"\"\"\n",
     "    import math\n",
     "    flag = None\n",
     "    x = ()\n",
     "    \n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "    # ...    \n",
+    "    if a == 0:\n",
+    "        # Trường hợp phương trình bậc 1 hoặc vô nghiệm/vô số nghiệm\n",
+    "        if b == 0:\n",
+    "            if c == 0:\n",
+    "                flag = -1   # Vô số nghiệm\n",
+    "                x = ()\n",
+    "            else:\n",
+    "                flag = 0    # Vô nghiệm\n",
+    "                x = ()\n",
+    "        else:\n",
+    "            # bx + c = 0 => x = -c/b\n",
+    "            flag = 1\n",
+    "            x = (-c / b,)\n",
+    "    else:\n",
+    "        # Phương trình bậc 2\n",
+    "        delta = b**2 - 4*a*c\n",
+    "        if delta < 0:\n",
+    "            flag = 0\n",
+    "            x = ()\n",
+    "        elif delta == 0:\n",
+    "            flag = 1\n",
+    "            x = (-b / (2*a),)\n",
+    "        else:\n",
+    "            flag = 2\n",
+    "            x2 = (-b + math.sqrt(delta)) / (2*a)\n",
+    "            x1 = (-b - math.sqrt(delta)) / (2*a)\n",
+    "            x = (x1, x2)\n",
     "    \n",
-    "    return flag, x\n",
-    "# GiaiPhuongTrinhBac2"
+    "    return flag, x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "026317a6-6f3a-4d67-a53c-9e8623aa7718",
    "metadata": {},
    "outputs": [
@@ -430,7 +452,7 @@
       "So nghiem: 1, nghiem = (-1.2,)\n",
       "a <> 0\n",
       "So nghiem: 0, nghiem = ()\n",
-      "So nghiem: 1, nghiem = -1.0\n",
+      "So nghiem: 1, nghiem = (-1.0,)\n",
       "So nghiem: 2, nghiem = (-3.0, -2.0)\n"
      ]
     }
@@ -455,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2977bb76-9c3e-4395-acd9-9b53183e3a9c",
    "metadata": {},
    "outputs": [
@@ -463,14 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moi ban nhap he so a, b, c:  1 5 6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Phuong trinh bac 2 1x^2 + 5x + 6 = 0 co 2 nghiem, x1 = -3.0, x2 = -2.0!\n"
+      "Phuong trinh bac 2 1.0x^2 + 5.0x + 6.0 = 0 co 2 nghiem, x1 = -3.0, x2 = -2.0!\n"
      ]
     }
    ],
@@ -523,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0198d726-ca73-4d42-ab0c-337a50228bb6",
    "metadata": {},
    "outputs": [],
@@ -535,8 +550,8 @@
     "    Output:\n",
     "        a = [1, 4, 1, 2, 3, 4, 1, 2, 3, 3, 1, 2, 3, 4, 10, 2]\n",
     "    \"\"\"\n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "    # ...\n",
+    "    s = input(\"Moi ban nhap mang (cach nhau khoang trang): \")\n",
+    "    a = list(map(int, s.split()))\n",
     "    \n",
     "    return a\n",
     "# NhapMang"
@@ -544,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c3b4c530-34f8-445b-bf69-5864e08bdb97",
    "metadata": {},
    "outputs": [
@@ -552,14 +567,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moi ban nhap mang (cach nhau khoang trang):  1 4 1 2 3 4 1 2 3 3 1 2 3 4 10 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1', '4', '1', '2', '3', '4', '1', '2', '3', '3', '1', '2', '3', '4', '10', '2']\n"
+      "[1, 4, 1, 2, 3, 4, 1, 2, 3, 3, 2, 3, 4, 10, 2]\n"
      ]
     }
    ],
@@ -570,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "424c3606-f2b4-4000-b5b9-7237f96f4a34",
    "metadata": {},
    "outputs": [],
@@ -583,15 +591,14 @@
     "        In ra man hinh:\n",
     "            Mang co 16 phan tu: 1 4 1 2 3 4 1 2 3 3 1 2 3 4 10 2 \n",
     "    \"\"\"\n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "    # ...\n",
+    "    print(f\"Mang co {len(a)} phan tu:\", *a)\n",
     "    \n",
     "# XuatMang"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a1cdc488-a080-47cb-bd06-42b12b47f84e",
    "metadata": {},
    "outputs": [
@@ -599,7 +606,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mang co 16 phan tu: 1 4 1 2 3 4 1 2 3 3 1 2 3 4 10 2 \n"
+      "Mang co 16 phan tu: 1 4 1 2 3 4 1 2 3 3 1 2 3 4 10 2\n"
      ]
     }
    ],
@@ -610,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c3b401bb-877e-4a2e-8940-81e79411c826",
    "metadata": {},
    "outputs": [],
@@ -624,8 +631,7 @@
     "        a = [-1, -4, -8, 6, 4, -5, -1, -4, -9, -5, -10, 0, -6, 2, 1, -9, -9, 10, -8, -9, -7, 9, 2, -4, -1, -6, 5, -6, 9, -8]\n",
     "    \"\"\"    \n",
     "    a = []\n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "    # ...\n",
+    "    a = [random.randint(vmin, vmax) for _ in range(n)]\n",
     "    \n",
     "    return a\n",
     "# SinhNgauNhien"
@@ -633,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d1b76bc2-f9ae-4a7a-9dcb-36e80e96ebd5",
    "metadata": {},
    "outputs": [
@@ -641,9 +647,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 9, 10, 4, -8, 9, -1, -2, 7, 7, -4, -4, -4, 10, 8, -3, -6, 0, -7, 10, 1, 4, -2, 3, -6, 9, -3, -8, -8]\n",
-      "[5, 2, 7, 3, 0, 6, 5, 3, 0, 1, 10, 9, 7, 3, 4, 0, 4, 4, 6, 2, 8, 1, 10, 6, 7, 7, 6, 4, 4, 9]\n",
-      "[-2, 1, -10, -8, -9, -2, -4, 1, 1, -5, -8, -1, -4, 0, -3, -7, -9, 1, -9, -1, -4, 0, -7, -4, -6, 1, -5, -6, -8, -10]\n"
+      "[-1, -4, 2, -2, 0, -8, 4, 1, -4, 3, 4, -8, 10, -7, 7, 0, 10, 9, 5, 9, -6, 3, -6, 6, 4, 3, 8, -10, -9, -5]\n",
+      "[6, 6, 6, 4, 9, 1, 4, 9, 10, 7, 1, 1, 7, 0, 10, 2, 2, 10, 9, 4, 0, 0, 9, 8, 9, 2, 0, 9, 6, 3]\n",
+      "[-3, -9, -7, -6, -7, -3, 2, -4, -2, -9, -2, -5, 2, -10, -4, -10, -8, -1, -6, 1, -2, -2, -4, -3, -4, -1, -6, 2, -8, -10]\n"
      ]
     }
    ],
@@ -658,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e710b533-d63d-4a08-a70f-e593f5ff3612",
    "metadata": {},
    "outputs": [],
@@ -672,8 +678,12 @@
     "    sochan = 0\n",
     "    sole = 0\n",
     "    \n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "    # ...\n",
+    "    for x in a:\n",
+    "        tong += x\n",
+    "        if x % 2 == 0:\n",
+    "            sochan += 1\n",
+    "        else:\n",
+    "            sole += 1\n",
     "    \n",
     "    return tong, sochan, sole\n",
     "# DemTongChanLe"
@@ -681,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "44c8959b-84fa-4174-83b3-18fc02152a04",
    "metadata": {},
    "outputs": [
@@ -703,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2627b2c2-ab2c-4774-8932-5db03e813a20",
    "metadata": {},
    "outputs": [],
@@ -719,8 +729,11 @@
     "    achan = []\n",
     "    ale = []\n",
     "    \n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "    # ...\n",
+    "    for x in a:\n",
+    "        if x % 2 == 0:\n",
+    "            achan.append(x)\n",
+    "        else:\n",
+    "            ale.append(x)\n",
     "    \n",
     "    return achan, ale\n",
     "# DayChanLe"
@@ -728,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "a9d76464-34d9-4b35-9250-8f9ab9b06a88",
    "metadata": {},
    "outputs": [
@@ -763,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "fe04c02c-1165-4cb1-a6f5-0c12ad9d1060",
    "metadata": {},
    "outputs": [],
@@ -776,8 +789,9 @@
     "        s = ['A', 'C', 'F', 'G', 'H', 'T']\n",
     "    \"\"\"\n",
     "    s = set([])\n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "    # ...\n",
+    "    \n",
+    "    for ch in a:\n",
+    "        s.add(ch)\n",
     "        \n",
     "    return sorted(s)\n",
     "# XuLyKhongTrung"
@@ -785,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "441638fc-6c33-4bf7-82a5-7e6dcfb400e2",
    "metadata": {},
    "outputs": [
@@ -805,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "ed5c380a-09fa-4da3-afb9-fcd863fe3ecb",
    "metadata": {},
    "outputs": [],
@@ -818,8 +832,13 @@
     "        dem = {'A': 2, 'G': 1, 'C': 2, 'F': 2, 'T': 1, 'H': 1}\n",
     "    \"\"\"\n",
     "    dem = {} # (k, v): k (ky tu) v (so lan xuat hien)\n",
-    "    \"\"\" CÁC BẠN LÀM BÀI Ở ĐÂY \"\"\"\n",
-    "    # ...    \n",
+    "    \n",
+    "    # duyệt qua từng phần tử trong a\n",
+    "    for ch in a:\n",
+    "        if ch in dem:\n",
+    "            dem[ch] += 1\n",
+    "        else:\n",
+    "            dem[ch] = 1    \n",
     "    \n",
     "    return dem\n",
     "# DemSoLanXuatHien"
@@ -827,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "235695e6-a3de-4bfb-a432-6ab086836877",
    "metadata": {},
    "outputs": [
