--- a/exercises/lab2/pythonProgramming.ipynb
+++ b/exercises/lab2/pythonProgramming.ipynb
@@ -10,63 +10,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3804aa82",
-   "metadata": {},
-   "source": [
-    "## Top Programming Languages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "caeaa268",
-   "metadata": {},
-   "source": [
-    "Python is an interpreted, object-oriented, high-level programming language with dynamic semantics."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88b65496",
-   "metadata": {},
-   "source": [
-    "### Python Ecosystem for Data Science"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "732f949a",
-   "metadata": {},
-   "source": [
-    "### Python Ecosystem for Data Science"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34aded89",
-   "metadata": {},
-   "source": [
-    "### The Quant Finance PyData Stack"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d8745654",
-   "metadata": {},
-   "source": [
-    "## Numpy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2c23dda8",
    "metadata": {},
    "source": [
-    "### Python Hello World"
+    "### 1. Python Hello World"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "89b6ac53",
    "metadata": {},
    "outputs": [
@@ -87,12 +39,12 @@
    "id": "cf4874e2",
    "metadata": {},
    "source": [
-    "### Python Syntax"
+    "### 2. Python Syntax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "383d4967",
    "metadata": {},
    "outputs": [],
@@ -102,13 +54,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcc438af",
+   "metadata": {},
+   "source": [
+    "> **Indentation**: Lưu ý khi làm việc với python (không sử dụng dấu ngoặc mà sử dụng dấu : và khi xuống dòng phải biết thụt lề vào 4 khoảng trắng)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f74c6ce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass\n"
+     ]
+    }
+   ],
    "source": [
-    "# Indentation: Lưu ý khi làm việc với python (không sử dụng dấu ngoặc mà sử dụng dấu : và khi xuống dòng phải biết thụt lề đúng)\n",
     "score = 80\n",
     "if score >=60:\n",
     "    print(\"Pass\")"
@@ -119,24 +86,22 @@
    "id": "3b370473",
    "metadata": {},
    "source": [
-    "### Python Variables"
+    "### 3. Python Variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b5d855aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Python Variables\n",
-    "x = 2\n",
-    "price = 2.5\n",
-    "word = 'Hello'\n",
-    "\n",
-    "word = 'Hello'\n",
-    "word = \"Hello\"\n",
-    "word = '''Hello'''\n",
+    "x = 2   #int\n",
+    "price = 2.5 #float\n",
+    "word = 'Hello'  #str  \n",
+    "word = \"Hello\"  #str  \n",
+    "word = '''Hello'''  #str  (sử dụng khi chuỗi có nhiều dòng)\n",
     "x = 2\n",
     "y = x + 1"
    ]
@@ -146,7 +111,7 @@
    "id": "bacf34c8",
    "metadata": {},
    "source": [
-    "Lưu ý là có 3 cách để lưu 1 chuỗi, trong trường hợp có quá nhiều ký tự đặc biệt thì cần sử dụng 2 hoặc 3 dấu để tránh bị trùng gây lỗi "
+    "> Lưu ý là có 3 cách để lưu 1 chuỗi, trong trường hợp có quá nhiều ký tự đặc biệt thì cần sử dụng 2 hoặc 3 dấu để tránh bị trùng gây lỗi "
    ]
   },
   {
@@ -154,12 +119,20 @@
    "id": "6a641829",
    "metadata": {},
    "source": [
-    "### Python_version()"
+    "### 4. Python_version()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37f09240",
+   "metadata": {},
+   "source": [
+    "> Hàm này sử dụng để biết được python đang sử dụng thuộc version nào"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "60be272f",
    "metadata": {},
    "outputs": [
@@ -172,7 +145,6 @@
     }
    ],
    "source": [
-    "# Hàm này sử dụng để biết được python đang sử dụng thuộc version nào\n",
     "from platform import python_version\n",
     "print(\"Python Version:\", python_version())"
    ]
@@ -182,20 +154,20 @@
    "id": "616cc272",
    "metadata": {},
    "source": [
-    "### Python Data Type\n",
-    "Python là một ngôn ngữ lập trình đặc biệt vời nhiều kiểu dữ liệu giúp bạn tạo nên một chương trình hữu ích. Một trong số kiểu dữ liệu phổ biến nhất là:\n",
+    "### 5. Python Data Type\n",
+    "- Python là một ngôn ngữ lập trình đặc biệt vời nhiều kiểu dữ liệu giúp bạn tạo nên một chương trình hữu ích. Một trong số kiểu dữ liệu phổ biến nhất là:\n",
     "\n",
-    "Số nguyên (integer): là một loại dữ liệu số vô hướng, ví dụ như 1, 2, 3, 4, 5.\n",
-    "Số thực (float): là một loại dữ liệu số có dấu thập phân, ví dụ như 1.5, 2.7, 3.14.\n",
-    "Chuỗi (string): là một loại dữ liệu chứa một chuỗi ký tự, ví dụ như \"hello\", \"goodbye\".\n",
-    "Boolean: là một loại dữ liệu có hai giá trị là True hoặc False.\n",
-    "Danh sách (list): là một loại dữ liệu chứa một tập hợp các giá trị, ví dụ như [1, 2, 3, 4, 5].\n",
-    "Từ điển (dictionary): là một loại dữ liệu chứa các cặp khóa-giá trị, ví dụ như {\"name\": \"John\", \"age\": 30}."
+    "    - `Số nguyên (integer)`: là một loại dữ liệu số vô hướng, ví dụ như 1, 2, 3, 4, 5.\n",
+    "    - `Số thực (float)`: là một loại dữ liệu số có dấu thập phân, ví dụ như 1.5, 2.7, 3.14.\n",
+    "    - `Chuỗi (string)`: là một loại dữ liệu chứa một chuỗi ký tự, ví dụ như \"hello\", \"goodbye\".\n",
+    "    - `Boolean`: là một loại dữ liệu có hai giá trị là True hoặc False.\n",
+    "    - `Danh sách (list)`: là một loại dữ liệu chứa một tập hợp các giá trị, ví dụ như [1, 2, 3, 4, 5].\n",
+    "    - `Từ điển (dictionary)`: là một loại dữ liệu chứa các cặp khóa-giá trị, ví dụ như {\"name\": \"John\", \"age\": 30}."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "8945177a",
    "metadata": {},
    "outputs": [],
@@ -226,14 +198,14 @@
    "id": "52a4a385",
    "metadata": {},
    "source": [
-    "### Python casting\n",
+    "### 6. Python casting\n",
     "\n",
-    "Để xác định kiểu dữ liệu của 1 biến nào đó ta có thể sử dụng hàm type() như sau:"
+    "> Để xác định kiểu dữ liệu của 1 biến nào đó ta có thể sử dụng hàm type() như sau:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "6a6cc621",
    "metadata": {},
    "outputs": [
@@ -261,12 +233,12 @@
    "id": "e258758a",
    "metadata": {},
    "source": [
-    "### Python Numbers"
+    "### 7.Python Numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "3a563eaa",
    "metadata": {},
    "outputs": [
@@ -294,7 +266,7 @@
    "id": "a5188af1",
    "metadata": {},
    "source": [
-    "### Python Arithmetic Operators"
+    "### 8. Python Arithmetic Operators"
    ]
   },
   {
@@ -302,25 +274,12 @@
    "id": "776c9a39",
    "metadata": {},
    "source": [
-    "Python Arithmetic Operators\n",
-    "\n",
-    "Arithmetic operators in Python are used to perform basic mathematical operations on numerical values. Here's a quick overview of the commonly used arithmetic operators:\n",
-    "\n",
-    "Operator\tDescription\tExample\n",
-    "+\tAddition\t5 + 3 → 8\n",
-    "-\tSubtraction\t5 - 3 → 2\n",
-    "*\tMultiplication\t5 * 3 → 15\n",
-    "/\tDivision (returns float)\t5 / 2 → 2.5\n",
-    "//\tFloor Division (integer result)\t5 // 2 → 2\n",
-    "%\tModulus (remainder)\t5 % 2 → 1\n",
-    "**\tExponentiation (power)\t5 ** 2 → 25\n",
-    "\n",
-    "Examples in Python Code:"
+    "> Các toán tử số học trong Python được sử dụng để thực hiện những phép toán cơ bản trên các giá trị số."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "e496aee0",
    "metadata": {},
    "outputs": [
@@ -339,19 +298,26 @@
     }
    ],
    "source": [
-    "# Python basic operators\n",
-    "print('7 + 2 =', 7 + 2)\n",
-    "print('7 - 2 =', 7 - 2)\n",
-    "print('7 * 2 =', 7 * 2)\n",
-    "print('7 / 2 =', 7 / 2)\n",
-    "print('7 // 2 =', 7 // 2)\n",
-    "print('7 % 2 =', 7 % 2)\n",
-    "print('7 ** 2 =', 7 ** 2)"
+    "print('7 + 2 =', 7 + 2)   # Cộng\n",
+    "print('7 - 2 =', 7 - 2)   # Trừ\n",
+    "print('7 * 2 =', 7 * 2)   # Nhân\n",
+    "print('7 / 2 =', 7 / 2)   # Chia\n",
+    "print('7 // 2 =', 7 // 2) # Chia lấy phần nguyên\n",
+    "print('7 % 2 =', 7 % 2)   # Chia lấy phần dư\n",
+    "print('7 ** 2 =', 7 ** 2) # Lũy thừa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b0fde69",
+   "metadata": {},
+   "source": [
+    "> Toán tử Boolean (hay còn gọi là toán tử logic) được dùng để kết hợp hoặc so sánh các biểu thức điều kiện, thường trả về kết quả True (đúng) hoặc False (sai)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "8dd2b189",
    "metadata": {},
    "outputs": [
@@ -377,7 +343,15 @@
    "id": "5677991b",
    "metadata": {},
    "source": [
-    "### Python BMI Calculator"
+    "### 9. Python BMI Calculator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f05c554",
+   "metadata": {},
+   "source": [
+    "> Tính toán BMI"
    ]
   },
   {
@@ -409,13 +383,13 @@
    "id": "030f0057",
    "metadata": {},
    "source": [
-    "##### Future value of a specified principal amount, rate of interest, and a number of years\n",
-    "How much is your $100 worth after 7 years?"
+    "### 10. Future value\n",
+    "> How much is your $100 worth after 7 years?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "eb92095c",
    "metadata": {},
    "outputs": [
@@ -428,7 +402,7 @@
     }
    ],
    "source": [
-    "# How much is your $100 worth after 7 years?\n",
+    "# Tính trực tiếp\n",
     "fv = 100 * 1.1 ** 7\n",
     "print('fv = ', round(fv, 2))\n",
     "# output = 194.87"
@@ -436,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "4f019ef2",
    "metadata": {},
    "outputs": [
@@ -449,7 +423,7 @@
     }
    ],
    "source": [
-    "# Future Value\n",
+    "# Sử dụng biến\n",
     "pv = 100\n",
     "r = 0.1\n",
     "n = 7\n",
@@ -459,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "dc31f082",
    "metadata": {},
    "outputs": [
@@ -472,7 +446,7 @@
     }
    ],
    "source": [
-    "# Future Value\n",
+    "# Sử dụng phần trăm\n",
     "amount = 100\n",
     "interest = 10 #10% = 0.01 * 10\n",
     "years = 7\n",
@@ -486,7 +460,7 @@
    "id": "f4df19ce",
    "metadata": {},
    "source": [
-    "## Python Data Structures"
+    "### 11. Python Data Structures"
    ]
   },
   {
@@ -494,35 +468,13 @@
    "id": "7da61c81",
    "metadata": {},
    "source": [
-    "### Python Collections\n",
-    "• There are four collection data types in the Python programming\n",
-    "    language\n",
-    "• List [] \n",
-    "    • a collection which is ordered and changeable. Allows duplicate\n",
-    "    members.\n",
+    "#### 11.1 Python Collections\n",
     "\n",
-    "• Tuple ()\n",
-    "    • a collection which is ordered and unchangeable. Allows duplicate\n",
-    "    members.\n",
-    "\n",
-    "• Set {}\n",
-    "    • a collection which is unordered, unchangeable, and unindexed. No\n",
-    "    duplicate members.\n",
-    "\n",
-    "• Dictionary {k:v}\n",
-    "    • a collection which is ordered and changeable. No duplicate\n",
-    "    members."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c97426a",
-   "metadata": {},
-   "source": [
-    "### Python Dictionaries {k:v}\n",
-    "\n",
-    "• As of Python version 3.7, dictionaries are ordered.\n",
-    "• In Python 3.6 and earlier, dictionaries are unordered."
+    "- Có bốn kiểu dữ liệu tập hợp trong ngôn ngữ lập trình Python:\n",
+    "    - `List []`: Một tập hợp có thứ tự và có thể thay đổi. Cho phép các phần tử trùng lặp.\n",
+    "    - `Tuple ()`: Một tập hợp có thứ tự và không thể thay đổi. Cho phép các phần tử trùng lặp.\n",
+    "    - `Set {}`: Một tập hợp không có thứ tự, không thể thay đổi, và không có chỉ số. Không cho phép phần tử trùng lặp.\n",
+    "    - `Dictionary {k:v}`: Một tập hợp có thứ tự và có thể thay đổi. Không cho phép khóa trùng lặp."
    ]
   },
   {
@@ -530,12 +482,12 @@
    "id": "9fee4f00",
    "metadata": {},
    "source": [
-    "### List[]"
+    "#### 11.2 List[]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "0dc784c9",
    "metadata": {},
    "outputs": [
@@ -551,11 +503,13 @@
     }
    ],
    "source": [
+    "# Tạo và truy cập list\n",
     "x = [60, 70, 80, 90]\n",
-    "print(len(x))\n",
-    "print(x[0])\n",
-    "print(x[1])\n",
-    "print(x[-1])"
+    "\n",
+    "print(len(x))    # Độ dài list\n",
+    "print(x[0])      # Phần tử đầu tiên\n",
+    "print(x[1])      # Phần tử thứ hai\n",
+    "print(x[-1])     # Phần tử cuối cùng"
    ]
   },
   {
@@ -563,9 +517,9 @@
    "id": "f050d4b7",
    "metadata": {},
    "source": [
-    "len(): how many items \n",
-    "type(): data type \n",
-    "list() constructor: creating a new list"
+    "- len(): có bao nhiêu phần tử\n",
+    "- type(): kiểu dữ liệu\n",
+    "- Hàm tạo list(): tạo một danh sách mới"
    ]
   },
   {
@@ -573,7 +527,7 @@
    "id": "9ba525cd",
    "metadata": {},
    "source": [
-    "### Python List Methods"
+    "> Python List Methods"
    ]
   },
   {
@@ -581,18 +535,18 @@
    "id": "3c451fac",
    "metadata": {},
    "source": [
-    "• Method Description<br>\n",
-    "• append() Adds an element at the end of the list<br>\n",
-    "• clear() Removes all the elements from the list<br>\n",
-    "• copy() Returns a copy of the list<br>\n",
-    "• count() Returns the number of elements with the specified value<br>\n",
-    "• extend() Add the elements of a list (or any iterable), to the end of the current list<br>\n",
-    "• index() Returns the index of the first element with the specified value<br>\n",
-    "• insert() Adds an element at the specified position<br>\n",
-    "• pop() Removes the element at the specified position<br>\n",
-    "• remove()Removes the item with the specified value<br>\n",
-    "• reverse() Reverses the order of the list<br>\n",
-    "• sort() Sorts the list<br>"
+    "- Một số hàm thường dùng:<br>\n",
+    "    - `append()`: Thêm một phần tử vào cuối danh sách\n",
+    "    - `clear()`: Xóa tất cả các phần tử trong danh sách\n",
+    "    - `copy()`: Trả về một bản sao của danh sách\n",
+    "    - `count()`: Trả về số lần xuất hiện của một giá trị xác định\n",
+    "    - `extend()`: Thêm các phần tử của một danh sách (hoặc iterable khác) vào cuối danh sách hiện tại\n",
+    "    - `index()`: Trả về chỉ số của phần tử đầu tiên có giá trị xác định\n",
+    "    - `insert()`: Thêm một phần tử tại vị trí chỉ định\n",
+    "    - `pop(): Xóa phần tử tại vị trí chỉ định\n",
+    "    - `remove()`: Xóa phần tử có giá trị xác định\n",
+    "    - `reverse()`: Đảo ngược thứ tự của danh sách\n",
+    "    - `sort()`: Sắp xếp danh sách"
    ]
   },
   {
@@ -600,15 +554,15 @@
    "id": "9a5b6c32",
    "metadata": {},
    "source": [
-    "### Tuples()\n",
+    "#### 11.3 Tuples()\n",
     "\n",
-    "A tuple in Python is a collection that cannot be modified.\n",
-    "A tuple is defined using parenthesis."
+    "- Trong Python, tuple là một tập hợp không thể thay đổi.\n",
+    "- Một tuple được định nghĩa bằng dấu ngoặc trò"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "dc6b99f8",
    "metadata": {},
    "outputs": [
@@ -624,11 +578,13 @@
     }
    ],
    "source": [
+    "# Tuple không thể thay đổi\n",
     "x = (10, 20, 30, 40, 50)\n",
-    "print(x[0])\n",
-    "print(x[1])\n",
-    "print(x[2])\n",
-    "print(x[-1])"
+    "\n",
+    "print(x[0])   # 10\n",
+    "print(x[1])   # 20\n",
+    "print(x[2])   # 30\n",
+    "print(x[-1])  # 50"
    ]
   },
   {
@@ -636,12 +592,18 @@
    "id": "657e7e5a",
    "metadata": {},
    "source": [
-    "### Sets{}"
+    "#### 11.4 Sets{}\n",
+    "\n",
+    "- Là tập hợp:\n",
+    "    - Không có thứ tự\n",
+    "    - Không có chỉ số (index)\n",
+    "    - Có thể thay đổi (thêm hoặc xóa phần tử)\n",
+    "    - Không cho phép trùng lặp phần tử"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "51aca925",
    "metadata": {},
    "outputs": [
@@ -660,15 +622,19 @@
    ],
    "source": [
     "animals = {'cat', 'dog'}\n",
-    "print('cat' in animals)\n",
-    "print('fish' in animals)\n",
-    "animals.add('fish')\n",
-    "print('fish' in animals)\n",
-    "print(len(animals))\n",
-    "# animals.add('cat’)\n",
-    "print(len(animals))\n",
-    "animals.remove('cat')\n",
-    "print(len(animals))"
+    "\n",
+    "print('cat' in animals)    # Kiểm tra có tồn tại\n",
+    "print('fish' in animals)   # False\n",
+    "\n",
+    "animals.add('fish')        # Thêm phần tử\n",
+    "print('fish' in animals)   # True\n",
+    "print(len(animals))        # 3\n",
+    "\n",
+    "animals.add('cat')         # Thêm phần tử đã có\n",
+    "print(len(animals))        # Vẫn 3 (không trùng lặp)\n",
+    "\n",
+    "animals.remove('cat')      # Xóa phần tử\n",
+    "print(len(animals))        # 2"
    ]
   },
   {
@@ -676,16 +642,15 @@
    "id": "4d1658b8",
    "metadata": {},
    "source": [
-    "### Dictionary {key : value}\n",
-    "Python Dictionary\n",
-    "Key → Value\n",
-    "'EN’ → 'English’\n",
-    "'FR’ → 'French'"
+    "#### 11.5 Dictionary {key : value}\n",
+    "- Khóa (Key) → Giá trị (Value)\n",
+    "    - `'EN' → 'English'`\n",
+    "    - `'FR' → 'French'`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "46b43651",
    "metadata": {},
    "outputs": [
@@ -698,30 +663,8 @@
     }
    ],
    "source": [
-    "k = { 'EN':'English', 'FR':'French' }\n",
-    "\n",
-    "print(k['EN'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6721fe02",
-   "metadata": {},
-   "source": [
-    "### Python Data Structures"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "3fe67a79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fruits = [\"apple\", \"banana\", \"cherry\"] #lists []\n",
-    "colors = (\"red\", \"green\", \"blue\") #tuples ()\n",
-    "animals = {'cat', 'dog'} #sets {}\n",
-    "person = {\"name\" : \"Tom\", \"age\" : 20} #dictionaries {}"
+    "k = {'EN': 'English', 'FR': 'French'}\n",
+    "print(k['EN'])  # Truy cập qua key"
    ]
   },
   {
@@ -729,12 +672,12 @@
    "id": "1aea3b66",
    "metadata": {},
    "source": [
-    "### Python for Finance Applications"
+    "#### 11.6 Python for Finance Applications"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "d69cf7a0",
    "metadata": {},
    "outputs": [
@@ -755,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "403ce14c",
    "metadata": {},
    "outputs": [
@@ -779,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "437fed28",
    "metadata": {},
    "outputs": [
@@ -801,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "da04a5e2",
    "metadata": {},
    "outputs": [
