upload file html

--- a/exercises/lab2/pythonProgramming.ipynb
+++ b/exercises/lab2/pythonProgramming.ipynb
@@ -2085,6 +2085,33 @@
    "source": [
     "# Kết thúc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "5b8f0d44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook pythonProgramming.ipynb to html\n",
+      "[NbConvertApp] Writing 416205 bytes to pythonProgramming.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html \"pythonProgramming.ipynb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d50a6a68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
