convert notebook PNMP.ipynb to html

--- a/exercises/lab2/PNMP.ipynb
+++ b/exercises/lab2/PNMP.ipynb
@@ -4952,6 +4952,26 @@
    "source": [
     "## Kết thúc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "002f3f16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook PNMP.ipynb to html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 17 image(s).\n",
+      "[NbConvertApp] Writing 1153370 bytes to PNMP.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html \"PNMP.ipynb\""
+   ]
   }
  ],
  "metadata": {
